--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DVideo",
+  "name": "-",
   "version": "0.1.0",
   "description": "Decentralized Social Media",
   "author": "Dapp University",
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
+    "tailwindcss": "^3.0.18",
     "truffle": "^5.4.30",
     "truffle-hdwallet-provider-privkey": "^0.3.0",
     "web3": "^1.3.0"
@@ -30,6 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:css": "tailwind build src/components/App.css -o public/style.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
